Add some fixes
- fix air toml to prevent infinite loop if swag is running
- Fix default adress for local dev in config yml
- Add swagger description for sys endpoints
